adding testing endpoint
